Github icon trial

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,7 +40,8 @@
 
       <table>
         <tr><a href="mailto:hrishikeshp33@am.students.amrita.edu"><i class="fa fa-envelope" style="font-size:25px;color:white;margin-right: 1em;"></i></a></tr>
-        <tr><a href="https://www.linkedin.com/in/hrishikesh-p/"><i class="fa fa-linkedin" style="font-size:25px;color:white"></i></a></tr>
+        <tr><a href="https://www.linkedin.com/in/hrishikesh-p/"><i class="fa fa-linkedin" style="font-size:25px;color:white;margin-right: 1em;"></i></a></tr>
+        <tr><a href="https://github.com/HrishikeshP-01"><i class="fa fa-github" style="font-size:25px;color:white"></i></a></tr>
       </table>
     </nav>
 
